--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       color: #222;
     }
     header {
-      background: url('https://upload.wikimedia.org/wikipedia/commons/e/e3/Houston_Skyline.jpg') no-repeat center center / cover;
+      background: url('https://images.pexels.com/photos/356830/pexels-photo-356830.jpeg') no-repeat center center / cover;
       color: var(--white);
       text-align: center;
       padding: 4rem 1rem 6rem;
