--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PB Growth Advisors</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PB Growth Advisors | Business Growth Strategy in Houston</title>
+  <meta name="description" content="Get a free 1-hour business growth strategy session with PB Growth Advisors. Serving small businesses in Houston with Fortune 100 expertise." />
+  <meta name="keywords" content="Houston business strategy, growth advisors, small business consulting, GTM strategy, pricing optimization, PB Growth Advisors" />
+  
+  <!-- Open Graph Meta -->
+  <meta property="og:title" content="PB Growth Advisors | Business Growth Strategy in Houston" />
+  <meta property="og:description" content="Free 1-hour session for small businesses to unlock growth potential. Based in Houston, TX." />
+  <meta property="og:image" content="https://images.pexels.com/photos/356830/pexels-photo-356830.jpeg" />
+  <meta property="og:url" content="https://anahatbabbar.github.io/pb-growth-landing/" />
+  <meta property="og:type" content="website" />
+  
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <style>
     :root {
       --blue: #003366;
