--- a/index.html
+++ b/index.html
@@ -144,6 +144,17 @@
         align-items: flex-start;
       }
     }
+    @media (max-width: 600px) {
+      header > div > a.btn {
+        display: block;
+        width: 100%;
+        margin: 0 0 1rem 0 !important;
+        box-sizing: border-box;
+      }
+      .btn-blue {
+        margin-left: 0 !important;
+      }
+    }
   </style>
 </head>
 <body>
