Beefed up About us
Beefed up the about us section. Added pictures and added profile briefs

--- a/index.html
+++ b/index.html
@@ -210,9 +210,18 @@
     <section class="section" id="about">
       <h2>About Us</h2>
       <div class="about">
-        <img src="https://randomuser.me/api/portraits/women/45.jpg" alt="Partner 1">
-        <img src="https://randomuser.me/api/portraits/men/55.jpg" alt="Partner 2">
-        <p>With over 38 years of combined experience in Fortune 100 strategy and mid-market growth, our founders bring big-league expertise to small business transformation in Houston.</p>
+        <img src="Images/Anahat.jpeg" alt="Partner 1">
+        <div>
+          <p><strong>Anahat Babbar</strong> is a revenue strategist and digital transformation leader with 18 years in commercial operations, having scaled mid-market businesses to $50M+ valuations. He has led high-impact transformations across SaaS, Tech, retail, and restaurants. He specializes in go-to-market and pricing innovation.</p>
+          <p><a href="www.linkedin.com/in/anahatbabbar" target="_blank">View LinkedIn Profile</a></p>
+        </div>
+      </div>
+      <div class="about">
+        <img src="Images/satish.jpeg" alt="Partner 2">
+        <div>
+          <p><strong>Satish Pathak</strong> brings 20+ years of strategy and growth experience from Fortune 100 firms. His focus is on sales org design, channel development, and operational efficiency.</p>
+          <p><a href="https://www.linkedin.com/in/satish-pathak/" target="_blank">View LinkedIn Profile</a></p>
+        </div>
       </div>
     </section>
 
